"""BUILD definitions for cuda_cccl package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_cccl proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@cuda_toolkit//cuda:versions_helper.bzl", "if_version_equal_or_greater_than")
load("//:version.bzl", "VERSION")

# TODO(zbarsky): these versions look not-free to compute, perhaps `version.bzl` should precompute the ones we check ?
_INCLUDE_PREFIX = "include" + if_version_equal_or_greater_than(VERSION, "13.0.0", "/cccl", "")

filegroup(
    name = "header_list",
    srcs = [
        ":thrust_header_list",
        ":nv_header_list",
        ":cuda_header_list",
        ":cub_header_list",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "headers",
    deps = [
        ":thrust_headers",
        ":nv_headers",
        ":cuda_headers",
        ":cub_headers",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "thrust_header_list",
    srcs = glob([
        _INCLUDE_PREFIX + "/thrust/**",
    ]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "thrust_headers",
    hdrs = [":thrust_header_list"],
    includes = [_INCLUDE_PREFIX],
    strip_include_prefix = _INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "cuda_header_list",
    srcs = glob([
        _INCLUDE_PREFIX + "/cuda/**",
    ]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cuda_headers",
    hdrs = [":cuda_header_list"],
    includes = [_INCLUDE_PREFIX],
    strip_include_prefix = _INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "nv_header_list",
    srcs = glob([
        _INCLUDE_PREFIX + "/nv/**",
    ]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "nv_headers",
    hdrs = [":nv_header_list"],
    includes = [_INCLUDE_PREFIX],
    strip_include_prefix = _INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "cub_header_list",
    srcs = glob([
        _INCLUDE_PREFIX + "/cub/**",
    ]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cub_headers",
    hdrs = [":cub_header_list"],
    includes = [_INCLUDE_PREFIX],
    strip_include_prefix = _INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
)
