"""BUILD definitions for cuda_cccl_github package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_cccl_github proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")

filegroup(
    name = "header_list",
    srcs = [":thrust_header_list",":nv_header_list", ":cuda_header_list", ":cub_header_list"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "headers",
    deps = [":thrust_headers",":nv_headers", ":cuda_headers", ":cub_headers"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "thrust_header_list",
    srcs = glob([
        "thrust/thrust/**",
    ]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "thrust_headers",
    hdrs = [":thrust_header_list"],
    includes = ["thrust"],
    strip_include_prefix = "thrust",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "cuda_header_list",
    srcs = glob([
        "libcudacxx/include/cuda/**",
    ]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cuda_headers",
    hdrs = [":cuda_header_list"],
    includes = ["libcudacxx/include"],
    strip_include_prefix = "libcudacxx/include",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "nv_header_list",
    srcs = glob([
        "libcudacxx/include/nv/**",
    ]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "nv_headers",
    hdrs = ["nv_header_list"],
    includes = ["libcudacxx/include/nv"],
    strip_include_prefix = "libcudacxx/include",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "cub_header_list",
    srcs = glob([
        "cub/cub/**",
    ]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cub_headers",
    hdrs = [":cub_header_list"],
    includes = ["cub"],
    strip_include_prefix = "cub",
    visibility = ["//visibility:public"],
)

