"""BUILD definitions for cuda_crt package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_crt proxy repository can re-export it.

# cuda_crt only exist for CUDA >= 13.0.0

load("@rules_cc//cc:cc_library.bzl", "cc_library")

filegroup(
    name = "header_list",
    srcs = glob(["include/crt/**"]),
    visibility = ["@cuda//cuda:__pkg__"],
)

cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["@cuda//cuda:__pkg__"],
)
