"""BUILD definitions for cuda_cublas package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_cublas proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("//:version.bzl", "LIB_VERSIONS")

cc_import(
    name = "cublas_shared_library",
    shared_library = "lib/libcublas.so." + LIB_VERSIONS["libcublas"],
    deps = [":cublasLt", ":headers"],
)

cc_import(
    name = "cublasLt_shared_library",
    deps = [":headers"],
    shared_library = "lib/libcublasLt.so." + LIB_VERSIONS["libcublaslt"],
)
cc_library(
    name = "cublas",
    visibility = ["//visibility:public"],
    deps = [":cublas_shared_library"],
)

cc_library(
    name = "cublasLt",
    visibility = ["//visibility:public"],
    deps = [":cublasLt_shared_library"],
)

filegroup(
    name = "header_list",
    srcs = [
        "include/cublas.h",
        "include/cublasLt.h",
        "include/cublas_api.h",
        "include/cublas_v2.h",
    ],
    visibility = ["//visibility:public"],
)


cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
