"""BUILD definitions for cuda_cublas package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_cublas proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("//:version.bzl", "LIB_VERSIONS")

cc_import(
    name = "cublas_shared_library",
    shared_library = "lib/libcublas.so." + LIB_VERSIONS["libcublas"],
    deps = [":cublasLt_shared_library", ":headers"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cublasLt_shared_library",
    deps = [":headers"],
    shared_library = "lib/libcublasLt.so." + LIB_VERSIONS["libcublaslt"],
    visibility = ["//visibility:public"],
)
cc_import(
    name = "cublas",
    shared_library = "lib/libcublas.so." + LIB_VERSIONS["libcublas"],
    static_library = "lib/libcublas_static.a",
    deps = [":cublasLt", ":headers"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cublasLt",
    shared_library = "lib/libcublasLt.so." + LIB_VERSIONS["libcublaslt"],
    static_library = "lib/libcublasLt_static.a",
    deps = [":headers"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cublas_static",
    deps = [":headers"],
    static_library = "lib/libcublas_static.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cublasLt_static",
    deps = [":headers"],
    static_library = "lib/libcublasLt_static.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "nvblas_shared_library",
    deps = [":headers"],
    shared_library = "lib/libnvblas.so." + LIB_VERSIONS["libnvblas"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "nvblas",
    visibility = ["//visibility:public"],
    deps = [":nvblas_shared_library"],
)

filegroup(
    name = "shared_library_files",
    srcs = [
        "lib/libcublas.so." + LIB_VERSIONS["libcublas"],
        "lib/libcublasLt.so." + LIB_VERSIONS["libcublaslt"],
        "lib/libnvblas.so." + LIB_VERSIONS["libnvblas"],
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "header_list",
    srcs = [
        "include/cublas.h",
        "include/cublasLt.h",
        "include/cublasXt.h",
        "include/cublas_api.h",
        "include/cublas_v2.h",
        "include/nvblas.h",
    ],
    visibility = ["//visibility:public"],
)


cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
