"""BUILD definitions for cuda_cublas package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_cublas proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("@{cuda_redist_repo}//:version.bzl", "CUDA_VERSION")
load("@cuda_toolkit//cuda:versions_helper.bzl", "if_version_equal_or_greater_than")
load("//:version.bzl", "LIB_VERSIONS")

cc_import(
    name = "cublas_shared_library",
    shared_library = "lib/libcublas.so." + LIB_VERSIONS["libcublas"],
    deps = [":headers"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cublasLt_shared_library",
    deps = [":headers"],
    shared_library = "lib/libcublasLt.so." + LIB_VERSIONS["libcublaslt"],
    visibility = ["//visibility:public"],
)
cc_import(
    name = "cublas_static_library",
    deps = [":headers"],
    static_library = "lib/libcublas_static.a",
)

cc_library(
    name = "cublas",
    deps = [":cublas_shared_library", ":cublasLt"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cublasLt_static_library",
    deps = [":headers"],
    static_library = "lib/libcublasLt_static.a",
)

cc_library(
    name = "cublasLt",
    deps = [":cublasLt_shared_library"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cublas_static",
    deps = [":cublas_static_library", ":cublasLt_static"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cublasLt_static",
    deps = [":cublasLt_static_library"] + if_version_equal_or_greater_than(
        CUDA_VERSION,
        "13.0.0",
        ["@{cuda_redist_repo}//culibos:culibos_static"],
    ),
    visibility = ["//visibility:public"],
)

cc_import(
    name = "nvblas_shared_library",
    deps = [":headers"],
    shared_library = "lib/libnvblas.so." + LIB_VERSIONS["libnvblas"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "nvblas",
    visibility = ["//visibility:public"],
    deps = [":nvblas_shared_library"],
)

filegroup(
    name = "shared_library_files",
    srcs = [
        "lib/libcublas.so." + LIB_VERSIONS["libcublas"],
        "lib/libcublasLt.so." + LIB_VERSIONS["libcublaslt"],
        "lib/libnvblas.so." + LIB_VERSIONS["libnvblas"],
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "header_list",
    srcs = [
        "include/cublas.h",
        "include/cublasLt.h",
        "include/cublasXt.h",
        "include/cublas_api.h",
        "include/cublas_v2.h",
        "include/nvblas.h",
    ],
    visibility = ["//visibility:public"],
)


cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
