"""BUILD definitions for cuda_cudart package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_cudart proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load(
    "@cuda_toolkit//cuda:versions_helper.bzl",
    "if_version_equal_or_greater_than",
    "if_version_lower_than",
)
load("@{cuda_redist_repo}//:version.bzl", "CUDA_VERSION")
load("//:version.bzl", "LIB_VERSIONS", "VERSION")

filegroup(
    name = "cuda_header",
    srcs = ["include/cuda.h"],
    visibility = ["//visibility:public"],
)

# Keep concrete paths explicit; reserve glob only for real patterns.
_HEADER_FILES = [
    "include/builtin_types.h",
    "include/channel_descriptor.h",
    "include/common_functions.h",
    "include/cooperative_groups.h",
    "include/cuComplex.h",
    "include/cuda.h",
    "include/cudaEGL.h",
    "include/cudaEGLTypedefs.h",
    "include/cudaGL.h",
    "include/cudaGLTypedefs.h",
    "include/cudaProfilerTypedefs.h",
    "include/cudaTypedefs.h",
    "include/cudaVDPAU.h",
    "include/cudaVDPAUTypedefs.h",
    "include/cuda_awbarrier.h",
    "include/cuda_awbarrier_helpers.h",
    "include/cuda_awbarrier_primitives.h",
    "include/cuda_bf16.h",
    "include/cuda_bf16.hpp",
    "include/cuda_device_runtime_api.h",
    "include/cuda_egl_interop.h",
    "include/cuda_fp16.h",
    "include/cuda_fp16.hpp",
    "include/cuda_gl_interop.h",
    "include/cuda_occupancy.h",
    "include/cuda_pipeline.h",
    "include/cuda_pipeline_helpers.h",
    "include/cuda_pipeline_primitives.h",
    "include/cuda_runtime.h",
    "include/cuda_runtime_api.h",
    "include/cuda_vdpau_interop.h",
    "include/cudart_platform.h",
    "include/device_atomic_functions.h",
    "include/device_atomic_functions.hpp",
    "include/device_double_functions.h",
    "include/device_functions.h",
    "include/device_launch_parameters.h",
    "include/device_types.h",
    "include/driver_functions.h",
    "include/driver_types.h",
    "include/host_config.h",
    "include/host_defines.h",
    "include/library_types.h",
    "include/math_constants.h",
    "include/math_functions.h",
    "include/mma.h",
    "include/nvfunctional",
    "include/sm_20_atomic_functions.h",
    "include/sm_20_atomic_functions.hpp",
    "include/sm_20_intrinsics.h",
    "include/sm_20_intrinsics.hpp",
    "include/sm_30_intrinsics.h",
    "include/sm_30_intrinsics.hpp",
    "include/sm_32_atomic_functions.h",
    "include/sm_32_atomic_functions.hpp",
    "include/sm_32_intrinsics.h",
    "include/sm_32_intrinsics.hpp",
    "include/sm_35_atomic_functions.h",
    "include/sm_35_intrinsics.h",
    "include/sm_60_atomic_functions.h",
    "include/sm_60_atomic_functions.hpp",
    "include/sm_61_intrinsics.h",
    "include/sm_61_intrinsics.hpp",
    "include/surface_indirect_functions.h",
    "include/surface_types.h",
    "include/texture_indirect_functions.h",
    "include/texture_types.h",
    "include/vector_functions.h",
    "include/vector_functions.hpp",
    "include/vector_types.h",
]

exports_files([
    "include/cuda.h",
])

cc_import(
    name = "cudart_static_library",
    deps = [":headers"],
    static_library = "lib/libcudart_static.a",
)

cc_import(
    name = "cudadevrt_static",
    deps = [":headers"],
    static_library = "lib/libcudadevrt.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cuda_stub",
    deps = [":cuda"],
    interface_library = "lib/stubs/libcuda.so",
    system_provided = 1,
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cudart_shared_library",
    deps = [":headers"],
    shared_library = "lib/libcudart.so." + LIB_VERSIONS["libcudart"],
    visibility = ["//visibility:public"],
)
cc_library(
    name = "cuda_driver",
    deps = [":cuda_stub"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cuda",
    hdrs = [":cuda_header"],
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "static",
    deps = select({
        "@{cuda_redist_repo}//driver:cuda_umd_libs": [
            "@{cuda_redist_repo}//driver:nvidia_driver",
            "@{cuda_redist_repo}//driver:nvidia_ptxjitcompiler",
        ],
        "//conditions:default": [":cuda_driver"],
    }) + [
        ":cudart_static_library",
        ":cudadevrt_static",
    ] + if_version_equal_or_greater_than(
        CUDA_VERSION,
        "13.0.0",
        ["@{cuda_redist_repo}//culibos:culibos_static"],
    ),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cudart",
    deps = select({
        "@{cuda_redist_repo}//driver:cuda_umd_libs": [
            "@{cuda_redist_repo}//driver:nvidia_driver",
            "@{cuda_redist_repo}//driver:nvidia_ptxjitcompiler",
        ],
        "//conditions:default": [":cuda_driver"],
    }) + [":cudart_shared_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "shared_library_files",
    srcs = [
        "lib/libcudart.so." + LIB_VERSIONS["libcudart"],
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "header_list",
    srcs = _HEADER_FILES + glob([
        "include/cooperative_groups/**",
    ]) + if_version_equal_or_greater_than(VERSION, "12.8.0", [
        "include/cuda_fp4.h",
        "include/cuda_fp4.hpp",
        "include/cuda_fp6.h",
        "include/cuda_fp6.hpp",
        "include/cuda_fp8.h",
        "include/cuda_fp8.hpp",
    ]) + if_version_lower_than(VERSION, "13.0.0", [
        "include/cuda_surface_types.h",
        "include/cuda_texture_types.h",
        "include/surface_functions.h",
        "include/texture_fetch_functions.h",
    ]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    deps = if_version_lower_than(
        CUDA_VERSION,
        "13.0.0",
        ["@{cuda_redist_repo}//nvcc:headers"],
    ),
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
