"""BUILD definitions for cuda_cudnn package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_cudnn proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("@{cuda_redist_repo}//:version.bzl", "CUDA_VERSION")
load("@cuda_toolkit//cuda:versions_helper.bzl", "if_version_equal_or_greater_than")
load("//:version.bzl", "LIB_VERSIONS")

cc_import(
    name = "cudnn_ops",
    deps = [":headers"],
    shared_library = "lib/libcudnn_ops.so." + LIB_VERSIONS["libcudnn_ops"],
)

cc_import(
    name = "cudnn_cnn",
    deps = [":headers"],
    shared_library = "lib/libcudnn_cnn.so." + LIB_VERSIONS["libcudnn_cnn"],
)

cc_import(
    name = "cudnn_adv",
    deps = [":headers"],
    shared_library = "lib/libcudnn_adv.so." + LIB_VERSIONS["libcudnn_adv"],
)

cc_import(
    name = "cudnn_graph",
    deps = [":headers"],
    shared_library = "lib/libcudnn_graph.so." + LIB_VERSIONS["libcudnn_graph"],
)

cc_import(
    name = "cudnn_engines_precompiled",
    deps = [":headers"],
    shared_library = "lib/libcudnn_engines_precompiled.so." + LIB_VERSIONS["libcudnn_engines_precompiled"],
)

cc_import(
    name = "cudnn_engines_runtime_compiled",
    deps = [":headers"],
    shared_library = "lib/libcudnn_engines_runtime_compiled.so." + LIB_VERSIONS["libcudnn_engines_runtime_compiled"],
)

cc_import(
    name = "cudnn_heuristic",
    deps = [":headers"],
    shared_library = "lib/libcudnn_heuristic.so." + LIB_VERSIONS["libcudnn_heuristic"],
)

cc_import(
    name = "cudnn_main",
    deps = [":headers"],
    shared_library = "lib/libcudnn.so." + LIB_VERSIONS["libcudnn"],
)
cc_library(
    name = "cudnn",
    deps = [
      ":cudnn_engines_precompiled",
      ":cudnn_ops",
      ":cudnn_graph",
      ":cudnn_cnn",
      ":cudnn_adv",
      ":cudnn_engines_runtime_compiled",
      ":cudnn_heuristic",
      "@{cuda_redist_repo}//nvrtc:nvrtc",
      ":cudnn_main",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "header_list",
    srcs = glob([
        "include/cudnn*.h",
    ]),
)


cc_library(
    name = "headers",
    hdrs = [":header_list"],
    deps = ["@{cuda_redist_repo}//cudart:headers"] + if_version_equal_or_greater_than(
        CUDA_VERSION,
        "13.0.0",
        ["@{cuda_redist_repo}//crt:headers"],
    ),
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
