"""BUILD definitions for cuda_cudnn8 package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_cudnn8 proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("@{cuda_redist_repo}//:version.bzl", "CUDA_VERSION")
load("//:version.bzl", "LIB_VERSIONS")

cc_import(
    name = "cudnn_ops_infer",
    deps = [":headers"],
    shared_library = "lib/libcudnn_ops_infer.so." + LIB_VERSIONS["libcudnn_ops_infer"],
)

cc_import(
    name = "cudnn_cnn_infer",
    deps = [":headers"],
    shared_library = "lib/libcudnn_cnn_infer.so." + LIB_VERSIONS["libcudnn_cnn_infer"],
)

cc_import(
    name = "cudnn_ops_train",
    deps = [":headers"],
    shared_library = "lib/libcudnn_ops_train.so." + LIB_VERSIONS["libcudnn_ops_train"],
)

cc_import(
    name = "cudnn_cnn_train",
    deps = [":headers"],
    shared_library = "lib/libcudnn_cnn_train.so." + LIB_VERSIONS["libcudnn_cnn_train"],
)

cc_import(
    name = "cudnn_adv_infer",
    deps = [":headers"],
    shared_library = "lib/libcudnn_adv_infer.so." + LIB_VERSIONS["libcudnn_adv_infer"],
)

cc_import(
    name = "cudnn_adv_train",
    deps = [":headers"],
    shared_library = "lib/libcudnn_adv_train.so." + LIB_VERSIONS["libcudnn_adv_train"],
)

cc_import(
    name = "cudnn_main",
    deps = [":headers"],
    shared_library = "lib/libcudnn.so." + LIB_VERSIONS["libcudnn"],
)
cc_library(
    name = "cudnn",
    deps = [
      ":cudnn_ops_infer",
      ":cudnn_ops_train",
      ":cudnn_cnn_infer",
      ":cudnn_cnn_train",
      ":cudnn_adv_infer",
      ":cudnn_adv_train",
      "@{cuda_redist_repo}//nvrtc:nvrtc",
      ":cudnn_main",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "header_list",
    srcs = glob([
        "include/cudnn*.h",
    ]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "headers",
    hdrs = [":header_list"],
    deps = ["@{cuda_redist_repo}//cudart:headers"] + (
        ["@{cuda_redist_repo}//crt:headers"]
        if CUDA_VERSION.split(".")[0] == "13"
        else []
    ),
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
