"""BUILD definitions for cuda_cufft package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_cufft proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("//:version.bzl", "LIB_VERSIONS")

# Keep concrete paths explicit; reserve glob only for real patterns.
_HEADER_FILES = [
    "include/cudalibxt.h",
]
_HEADER_GLOBS = [
    "include/cufft*.h",
]

cc_import(
    name = "cufft_shared_library",
    deps = [":headers"],
    shared_library = "lib/libcufft.so." + LIB_VERSIONS["libcufft"],
    visibility = ["//visibility:public"],
)
cc_import(
    name = "cufft",
    static_library = "lib/libcufft_static.a",
    shared_library = "lib/libcufft.so." + LIB_VERSIONS["libcufft"],
    deps = [":headers"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cufftw",
    static_library = "lib/libcufftw_static.a",
    shared_library = "lib/libcufftw.so." + LIB_VERSIONS["libcufftw"],
    deps = [":headers"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cufft_static",
    deps = [":headers"],
    static_library = "lib/libcufft_static.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cufftw_shared_library",
    deps = [":headers"],
    shared_library = "lib/libcufftw.so." + LIB_VERSIONS["libcufftw"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cufftw_static",
    deps = [":headers"],
    static_library = "lib/libcufftw_static.a",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "shared_library_files",
    srcs = [
        "lib/libcufft.so." + LIB_VERSIONS["libcufft"],
        "lib/libcufftw.so." + LIB_VERSIONS["libcufftw"],
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "header_list",
    srcs = _HEADER_FILES + glob(_HEADER_GLOBS),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
