"""BUILD definitions for cuda_cufft package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_cufft proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("//:version.bzl", "LIB_VERSIONS")

# Keep concrete paths explicit; reserve glob only for real patterns.
_HEADER_FILES = [
    "include/cudalibxt.h",
]
_HEADER_GLOBS = [
    "include/cufft*.h",
]

cc_import(
    name = "cufft_shared_library",
    deps = [":headers"],
    shared_library = "lib/libcufft.so." + LIB_VERSIONS["libcufft"],
    visibility = ["//visibility:public"],
)
cc_import(
    name = "cufft_static_library",
    deps = [":headers"],
    static_library = "lib/libcufft_static.a",
)

cc_library(
    name = "cufft",
    deps = [":cufft_shared_library"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cufftw_static_library",
    deps = [":headers"],
    static_library = "lib/libcufftw_static.a",
)

cc_import(
    name = "cufftw_shared_library",
    deps = [":headers"],
    shared_library = "lib/libcufftw.so." + LIB_VERSIONS["libcufftw"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cufftw",
    deps = [":cufftw_shared_library"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cufft_static",
    deps = [":cufft_static_library"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cufftw_static",
    deps = [":cufftw_static_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "shared_library_files",
    srcs = [
        "lib/libcufft.so." + LIB_VERSIONS["libcufft"],
        "lib/libcufftw.so." + LIB_VERSIONS["libcufftw"],
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "header_list",
    srcs = _HEADER_FILES + glob(_HEADER_GLOBS),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
