"""BUILD definitions for cuda_cupti package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_cupti proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("//:version.bzl", "LIB_VERSIONS")
load(
    "@cuda_toolkit//cuda:versions_helper.bzl",
    "if_version_equal_or_greater_than",
)

# Keep concrete paths explicit; reserve glob only for real patterns.
_HEADER_FILES = [
    "include/cuda_stdint.h",
    "include/cupti.h",
    "include/cupti_activity.h",
    "include/cupti_callbacks.h",
    "include/cupti_checkpoint.h",
    "include/cupti_driver_cbid.h",
    "include/cupti_events.h",
    "include/cupti_metrics.h",
    "include/cupti_nvtx_cbid.h",
    "include/cupti_pcsampling.h",
    "include/cupti_pcsampling_util.h",
    "include/cupti_profiler_target.h",
    "include/cupti_result.h",
    "include/cupti_runtime_cbid.h",
    "include/cupti_target.h",
    "include/cupti_version.h",
    "include/generated_cudaGL_meta.h",
    "include/generated_cudaVDPAU_meta.h",
    "include/generated_cuda_gl_interop_meta.h",
    "include/generated_cuda_meta.h",
    "include/generated_cuda_runtime_api_meta.h",
    "include/generated_cuda_vdpau_interop_meta.h",
    "include/generated_cudart_removed_meta.h",
    "include/generated_nvtx_meta.h",
    "include/nvperf_common.h",
    "include/nvperf_cuda_host.h",
    "include/nvperf_host.h",
    "include/nvperf_target.h",
]

cc_import(
    name = "cupti_shared_library",
    deps = [":headers"],
    shared_library = "lib/libcupti.so." + LIB_VERSIONS["libcupti"],
    visibility = ["//visibility:public"],
)
cc_import(
    name = "cupti_static_library",
    deps = [":headers"],
    static_library = "lib/libcupti_static.a",
)

cc_library(
    name = "cupti",
    deps = [":cupti_shared_library"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cupti_static",
    deps = [":cupti_static_library"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "checkpoint_shared_library",
    deps = [":headers"],
    shared_library = "lib/libcheckpoint.so",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "checkpoint",
    deps = [":checkpoint_shared_library"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "nvperf_host_shared_library",
    deps = [":headers"],
    shared_library = "lib/libnvperf_host.so",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "nvperf_host",
    deps = [":nvperf_host_shared_library"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "nvperf_target_shared_library",
    deps = [":headers"],
    shared_library = "lib/libnvperf_target.so",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "nvperf_target",
    deps = [":nvperf_target_shared_library"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "pcsamplingutil_shared_library",
    deps = [":headers"],
    shared_library = "lib/libpcsamplingutil.so",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "pcsamplingutil",
    deps = [":pcsamplingutil_shared_library"],
    visibility = ["//visibility:public"],
)

alias(
    name = "cuda_cupti",
    actual = ":cupti",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "shared_library_files",
    srcs = [
        "lib/libcupti.so." + LIB_VERSIONS["libcupti"],
        "lib/libcheckpoint.so",
        "lib/libnvperf_host.so",
        "lib/libnvperf_target.so",
        "lib/libpcsamplingutil.so",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "header_list",
    srcs = _HEADER_FILES + glob([
        "include/Openacc/**",
        "include/Openmp/**",
    ]) + if_version_equal_or_greater_than(LIB_VERSIONS["libcupti"], "2023.3", [
        "include/cupti_activity_deprecated.h",
    ]) + if_version_equal_or_greater_than(LIB_VERSIONS["libcupti"], "2024.0", [
        "include/cupti_sass_metrics.h",
        "include/cupti_common.h",
    ]) + if_version_equal_or_greater_than(LIB_VERSIONS["libcupti"], "2024.3", [
        "include/cupti_pmsampling.h",
        "include/cupti_profiler_host.h",
        "include/cupti_range_profiler.h",
    ]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include/"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
