"""BUILD definitions for cuda_curand package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_curand proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("//:version.bzl", "LIB_VERSIONS")

cc_import(
    name = "curand_shared_library",
    deps = [":headers"],
    shared_library = "lib/libcurand.so." + LIB_VERSIONS["libcurand"],
)

cc_library(
    name = "curand",
    deps = [":curand_shared_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "header_list",
    srcs = glob(["include/curand*.h"]),
    visibility = ["@cuda//cuda:__pkg__"],
)

cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["@cuda//cuda:__pkg__"],
)
