"""BUILD definitions for cuda_curand package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_curand proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("//:version.bzl", "LIB_VERSIONS")

cc_import(
    name = "curand_shared_library",
    deps = [":headers"],
    shared_library = "lib/libcurand.so." + LIB_VERSIONS["libcurand"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "curand_static_library",
    deps = [":headers"],
    static_library = "lib/libcurand_static.a",
)

cc_library(
    name = "curand",
    deps = [":curand_shared_library"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "curand_static",
    deps = [":curand_static_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "shared_library_files",
    srcs = [
        "lib/libcurand.so." + LIB_VERSIONS["libcurand"],
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "header_list",
    srcs = glob(["include/curand*.h"]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
