"""BUILD definitions for cuda_cusolver package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_cusolver proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("//:version.bzl", "LIB_VERSIONS")
cc_import(
    name = "cusolver_shared_library",
    shared_library = "lib/libcusolver.so." + LIB_VERSIONS["libcusolver"],
    deps = [
        "@cuda//nvjitlink:nvjitlink",
        "@cuda//cusparse:cusparse",
        "@cuda//cublas:cublas",
        "@cuda//cublas:cublasLt",
        ":headers",
    ],
)
cc_library(
    name = "cusolver",
    deps = [":cusolver_shared_library"],
    visibility = ["//visibility:public"],
)


filegroup(
    name = "header_list",
    srcs = glob([
        "include/cusolver*.h",
    ]),
    visibility = ["@cuda//cuda:__pkg__"],
)

cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["@cuda//cuda:__pkg__"],
)
