"""BUILD definitions for cuda_cusolver package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_cusolver proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("//:version.bzl", "LIB_VERSIONS")
cc_import(
    name = "cusolver_shared_library",
    shared_library = "lib/libcusolver.so." + LIB_VERSIONS["libcusolver"],
    deps = [
        "@{cuda_redist_repo}//nvjitlink:nvjitlink",
        "@{cuda_redist_repo}//cusparse:cusparse",
        "@{cuda_redist_repo}//cublas:cublas",
        "@{cuda_redist_repo}//cublas:cublasLt",
        ":headers",
    ],
    visibility = ["//visibility:public"],
)
cc_import(
    name = "cusolver",
    static_library = "lib/libcusolver_static.a",
    shared_library = "lib/libcusolver.so." + LIB_VERSIONS["libcusolver"],
    deps = [
        "@{cuda_redist_repo}//nvjitlink:nvjitlink",
        "@{cuda_redist_repo}//cusparse:cusparse",
        "@{cuda_redist_repo}//cublas:cublas",
        "@{cuda_redist_repo}//cublas:cublasLt",
        ":headers",
    ],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cusolverMg_shared_library",
    deps = [":headers"],
    shared_library = "lib/libcusolverMg.so." + LIB_VERSIONS["libcusolvermg"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cusolverMg",
    deps = [":cusolverMg_shared_library"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cusolver_static",
    deps = [":headers"],
    static_library = "lib/libcusolver_static.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cusolver_lapack_static",
    deps = [":headers"],
    static_library = "lib/libcusolver_lapack_static.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cusolver_metis_static",
    deps = [":headers"],
    static_library = "lib/libcusolver_metis_static.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "metis_static",
    static_library = "lib/libmetis_static.a",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "shared_library_files",
    srcs = [
        "lib/libcusolver.so." + LIB_VERSIONS["libcusolver"],
        "lib/libcusolverMg.so." + LIB_VERSIONS["libcusolvermg"],
    ],
    visibility = ["//visibility:public"],
)


filegroup(
    name = "header_list",
    srcs = glob([
        "include/cusolver*.h",
    ]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
