"""BUILD definitions for cuda_cusparse package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_cusparse proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("//:version.bzl", "LIB_VERSIONS")
cc_import(
    name = "cusparse_shared_library",
    shared_library = "lib/libcusparse.so." + LIB_VERSIONS["libcusparse"],
    deps = ["@{cuda_redist_repo}//nvjitlink:nvjitlink", ":headers"],
)
cc_library(
    name = "cusparse",
    deps = [":cusparse_shared_library"],
    visibility = ["//visibility:public"],
)

alias(
    name = "libcusparse",
    actual = ":cusparse",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "header_list",
    srcs = ["include/cusparse.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
